# evo_prompt

./: .gitignore  README.md  requirements.txt
app/: main.py
app/interceptors/: anthropic.py  google.py  openai.py
backend/app/: __init__.py  database.py  logger.py  main.py  schemas.py
backend/app/interceptors/: __init__.py
backend/app/services/: evaluator.py  ingestion.py
frontend/: app.js  index.html  style.css
scratch/: test_wrapper.py
scripts/: start.sh
sdk/: pyproject.toml
sdk/evo_prompt_sdk/: __init__.py  google_wrapper.py  tracer.py
sdk/evo_prompt_sdk/dto/: google_models.py
sdk/tests/: test_google_wrapper.py
ui/: index.html
