[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evo-prompt-sdk"
version = "0.1.0"
description = "Lightweight wrapper for tracing Google GenAI calls into evo_prompt"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["evo_prompt_sdk*"]
